[tool.poetry]
name = "exam"
version = "0.1.0"
description = ""
authors = ["Giacomo Benedetti <giacomo.bndt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
matplotlib = "^3.9.1"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
